<resources>
    <string name="app_name">MyLink</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_start_page">连连看</string>
    <string name="title_startpage">连连看</string>
    <string name="input_label">mIME</string>
    <string name="k159">159</string>
    <string name="k308">308</string>
    <string name="k136">136</string>
    <string name="k1">1</string>
    <string name="k2">2</string>
    <string name="k3">3</string>
    <string name="k4">4</string>
    <string name="k5">5</string>
    <string name="k6">6</string>
    <string name="k7">7</string>
    <string name="code1">pwd1</string>
    <string name="code2">pwd2</string>
    <string name="key_cancel">cancel</string>
    <string name="text_btn_restart">重来一局</string>
    <string name="text_btn_nextround">下一关</string>
    <string name="text_btn_exit">退出</string>
    <string name="delete">D</string>
    <string name="next">N</string>
    <string name="title_setting">游戏设置</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_titile_row">行数量</string>
    <string name="pref_row_summ">有多少行</string>
    <string name="pref_col_summ">有多少列</string>
    <string name="pref_title_col">列数量</string>
    <string name="pref_difficulty_summ">连连看难度</string>
    <string name="pref_difficulty">难度</string>
    <string name="pref_rowCountSelect">选择行数</string>
    <string name="pref_colCountSelect">选择列数</string>
    <string name="pref_difficultySelect">选择难度</string>
    <string name="pref_difficulty_easy">简单</string>
    <string name="pref_difficulty_normal">普通</string>
    <string name="pref_difficulty_hard">难</string>
</resources>
