<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4">
    <Button
        android:id="@+id/k159"
        android:layout_width="90dp"
        android:layout_height="50dp"

        android:text="@string/k159"/>
    <Button
        android:id="@+id/k308"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/k308"/>
    <Button
        android:id="@+id/k136"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/k136"/>
    <Button
        android:id="@+id/k1"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/k1"/>
    <Button
        android:id="@+id/k2"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/k2"/>
    <Button
        android:id="@+id/k3"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/k3"/>
    <Button
        android:id="@+id/k4"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/k4"/>
    <Button
        android:id="@+id/k5"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/k5"/>
    <Button
        android:id="@+id/k6"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/k6"/>
    <Button
        android:id="@+id/k7"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/k7"/>

</GridLayout>